syntax = "proto3";

option csharp_namespace = "api_clientes.grpc.services.cliente.Protos";

package endereco;

service EnderecoService {

    rpc Listar (Empty) returns (Enderecos);
	rpc Obter (Request) returns (Endereco);
    rpc Inserir (Endereco) returns (Empty);
    rpc Alterar (Endereco) returns (Empty);
    rpc Excluir (Request) returns (Empty);
}

message Empty {

}

message Request {

  int32 Id = 1;

}

message Endereco {
  
  int32 Id = 1;
  string Cep = 2;
  string Logradouro = 3;
  string Bairro = 4;
  string Cidade = 5;
  string Estado = 6;

}	

message Enderecos {

  repeated Endereco items = 1;

}	